--- a/.github/ISSUE_TEMPLATE/contact-support.yml
+++ b/.github/ISSUE_TEMPLATE/contact-support.yml
@@ -1,7 +1,7 @@
 name: Contact Support
 description: Contact support and get help
 title: Contact Support
-labels: "support"
+labels: ["support"]
 assignees: devarshishimpi
 body:
   - type: markdown
