--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -1,8 +1,7 @@
 name: "💡 Feature Request"
 description: Create a new ticket for a new feature request
 title: "💡 [REQUEST] - <title>"
-labels: ["question"]
-assignees: devarshishimpi
+labels: ["enhancement"]
 body:
   - type: input
     id: start_date
