--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,8 @@
     "@heroicons/react": "^2.0.18",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-top-loading-bar": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10",
